--- a/Names.html
+++ b/Names.html
@@ -3,10 +3,10 @@
 <script type="text.javascript">
 
 // Display name "James McNeil"
-alert("James McNeil, Gustavo Dias, Simeon Dzeiciol");
+alert("James McNeil, Gustavo Dias, Simeon Dzeiciol, Nordean Evans");
 
 // Display next Name(s) Here
-alert ("");
+alert ("Nordean Evans");
 
 // Display next Name
 alert ("Ryan Arrowsmith")
